tests/snapshots/examples_fixtures/functions__test_duplicate_declaration_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/test_duplicate_declaration_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `b` is already defined.

  --> examples/functions/test_duplicate_declaration_error.flx:3:1
  |
3 | let b = 10;
  | ^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/functions/test_duplicate_declaration_error.flx:2:1
  |
2 | let b = 5;
  | ^^^^^^^^^^
== stdout ==
<not executed>
